examples/neg/parsing/bin_op_spaces.effekt
def main() = {
  // OK
  val _ = 1 + 2
  val _ = 1  + 2
  val _ = 1 +  2
  val _ = 1 +
    2

  // FAIL
  val _ = 1 +2
  val _ = 1+ 2
  val _ = 1+2

  // NOTE: this is here on purpose to showcase error recovery!
  (
}